Postgre(Reservation) commit

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,16 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 MONGO_URI=mongodb://localhost:27017/club-verse
 
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+EMAIL_USER=anshvohra22@gmail.com
+EMAIL_PASS=anshvohra@2002
 
-OPENWEATHER_API_KEY=your-openweather-api-key
+OPENWEATHER_API_KEY=dbdf15a570f83b26ad568c4dd7cfdab8
+
 
 NODE_ENV=development
+
+
+POSTGRES_DB=clubverse
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=anshvohra@2002
+POSTGRES_HOST=localhost
