--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "uuid": "^10.0.0",
     "winston": "^3.13.0",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "redis": "^4.6.13",
+    "type": "module"
   }
 }
