--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "winston": "^3.13.0",
     "nodemailer": "^6.9.14",
     "redis": "^4.6.13",
-    "type": "module"
+    "csurf": "^1.11.0"
   }
 }
