--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
   "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.2",
-    "morgan": "^1.10.0",
-    "debug": "^4.3.4",
-    "mongoose": "^8.18.2",
-    "sequelize": "^6.37.3",
-    "pg": "^8.12.0",
-    "mysql2": "^3.10.3",
-    "uri": "^0.1.0",
-    "ejs": "^3.1.9",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
-    "cors": "^2.8.5",
-    "express-rate-limit": "^7.4.0",
-    "cookie-parser": "^1.4.6",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "uuid": "^10.0.0",
-    "winston": "^3.13.0",
+    "mongoose": "^8.18.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.10.3",
     "nodemailer": "^6.9.14",
+    "pg": "^8.12.0",
     "redis": "^4.6.13",
-    "csurf": "^1.11.0"
+    "sequelize": "^6.37.3",
+    "uri": "^0.1.0",
+    "uuid": "^10.0.0",
+    "winston": "^3.13.0"
   }
 }
